# OOP

./: README.md
lab1/: CMakeLists.txt  main.cpp
lab1/include/: MyList.h
lab1/src/: MyList.cpp
lab10/: Data.h  Lab10.cpp  Sum.h  Table.h
lab11/: Lab11.cpp  Variable.h
lab12/: PairOfNumbers.h  RangeArray.h  lab12.cpp
lab13/: Animal.h  Animals.h  Meadow.h  main.cpp
lab2/: CMakeLists.txt  main.cpp
lab2/include/: W.h
lab2/src/: W.cpp
lab3/: CMakeLists.txt  main.cpp
lab3/include/: StringBack.h
lab3/src/: StringBack.cpp
lab4/: CMakeLists.txt  main.cpp
lab4/include/: Funkcje.h  ZlozenieFunkcji.h
lab4/src/: Funkcje.cpp  ZlozenieFunkcji.cpp
lab5/: CMakeLists.txt  main.cpp
lab5/include/: Rectangle.h  Shape2D.h  ShapeContainer.h  Vertex.h
lab5/src/: Rectangle.cpp  Shape2D.cpp  ShapeContainer.cpp  Vertex.cpp
lab6/: CMakeLists.txt  main.cpp
lab6/include/: Primitive.h  Product.h  Ratio.h  Sum.h
lab6/src/: Primitive.cpp  Product.cpp  Ratio.cpp  Sum.cpp
lab7/: CMakeLists.txt  main.cpp
lab7/include/: Dir.h  File.h  Object.h
lab7/src/: Dir.cpp  File.cpp  Object.cpp
lab8/: GameObj.cpp  GameObj.h  main.cpp
lab9/: CMakeLists.txt  main.cpp
lab9/include/: Point2D.h
lab9/src/: Point2D.cpp
